# fpv_main

base_simulator/: README.md  package.xml
base_simulator/launch/: px4_start.launch  setupTF.launch  start.launch  start_with_sensor_nav.launch
base_simulator/models/bridge/: model.config
base_simulator/models/tunnel/: model.config
base_simulator/models/tunnel_c_shape/: model.config
base_simulator/models/tunnel_s_shape/: model.config
base_simulator/models/tunnel_straight/: model.config
base_simulator/src/: DialogKeyboard.ui  droneObjectRos.cpp  quadcopterPlugin.cpp  quadcopterTFBroadcaster.cpp
base_simulator/urdf/: quadcopter.urdf
cv_module/: FPV_MAIN_INTEGRATION.md  README.md  launch_cv_detector.bash
cv_module/compat/: fpv_main_bridge.bash
cv_module/yolo_bringup/launch/: fpv_cv.launch.py
cv_module/yolo_ros/: package.xml  setup.py
cv_module/yolo_ros/yolo_ros/: detection_labels_node.py
sensor_navigation/: .gitignore  README.md
sensor_navigation/src/airsim_utils/: package.xml
sensor_navigation/src/attitude_bridge/: CMakeLists.txt  package.xml
sensor_navigation/src/attitude_bridge/launch/: attitude_bridge.launch
sensor_navigation/src/attitude_bridge/scripts/: attitude_bridge.py
sensor_navigation/src/control_tuner/: package.xml
sensor_navigation/src/local_planner/: package.xml
sensor_navigation/src/vehicle_simulator/: package.xml
sensor_navigation/src/waypoint_example/: package.xml
sensor_navigation/src/waypoint_rviz_plugin/: package.xml
vision_test/: CMakeLists.txt  README.md  package.xml
vision_test/launch/: autonomy_test.launch  waypoint_test.launch
vision_test/src/: autonomy_test.py  waypoint_publisher.py
