<?xml version="1.0"?>
<package format="2">
  <name>vision_test</name>
  <version>1.0.0</version>
  <description>Autonomy test module for p2176 UAV simulator — waypoint navigation and autopilot verification.</description>

  <maintainer email="p2176@miem.hse.ru">МИЭМ НИУ ВШЭ / проект 2176</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>uav_simulator</exec_depend>
</package>
