<?xml version="1.0"?>
<package format="2">
  <name>attitude_bridge</name>
  <version>1.0.0</version>
  <description>
    Attitude command bridge for Project 2176.
    Converts /attitude_control (geometry_msgs/TwistStamped) from
    sensor_navigation pathFollower into /p2176/quadcopter/cmd_acc
    (mavros_msgs/PositionTarget) for base_simulator quadcopterPlugin.
  </description>

  <maintainer email="p2176@miem.hse.ru">МИЭМ НИУ ВШЭ / проект 2176</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
</package>
