<package>
  <name>control_tuner</name>
  <version>0.0.1</version>
  <description>Control Tuner</description>
  <maintainer email="p2176@miem.hse.ru">МИЭМ НИУ ВШЭ / проект 2176</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_filters</run_depend>
</package>
